package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_docker//container:bundle.bzl", "container_bundle")
load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")
load("//prow:def.bzl", "prefix", "tags")
load(
    "//def:image.bzl",
    image_tags = "tags",
)

container_bundle(
    name = "release",
    images = tags(
        "artifact-uploader",
        "branchprotector",
        "build",
        "clonerefs",
        "deck",
        "entrypoint",
        "gerrit",
        "crier",
        "grandmatriarch",
        "gcsupload",
        "hook",
        "horologium",
        "initupload",
        "jenkins-operator",
        "plank",
        "sidecar",
        "sinker",
        "status-reconciler",
        "tide",
        "tot",
    ) + image_tags(**{
        prefix("needs-rebase"): "//prow/external-plugins/needs-rebase:image",
    }) + image_tags(**{
        prefix("cherrypicker"): "//prow/external-plugins/cherrypicker:image",
    }) + image_tags(**{
        prefix("refresh"): "//prow/external-plugins/refresh:image",
    }),
)

docker_push(
    name = "release-push",
    bundle = ":release",
)

filegroup(
    name = "configs",
    srcs = glob(["*.yaml"]),
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//prow/apis/prowjobs:all-srcs",
        "//prow/artifact-uploader:all-srcs",
        "//prow/client/clientset/versioned:all-srcs",
        "//prow/client/informers/externalversions:all-srcs",
        "//prow/client/listers/prowjobs/v1:all-srcs",
        "//prow/clonerefs:all-srcs",
        "//prow/cluster:all-srcs",
        "//prow/cmd/artifact-uploader:all-srcs",
        "//prow/cmd/branchprotector:all-srcs",
        "//prow/cmd/build:all-srcs",
        "//prow/cmd/checkconfig:all-srcs",
        "//prow/cmd/clonerefs:all-srcs",
        "//prow/cmd/config-bootstrapper:all-srcs",
        "//prow/cmd/crier:all-srcs",
        "//prow/cmd/deck:all-srcs",
        "//prow/cmd/entrypoint:all-srcs",
        "//prow/cmd/gcsupload:all-srcs",
        "//prow/cmd/gerrit:all-srcs",
        "//prow/cmd/grandmatriarch:all-srcs",
        "//prow/cmd/hook:all-srcs",
        "//prow/cmd/horologium:all-srcs",
        "//prow/cmd/initupload:all-srcs",
        "//prow/cmd/jenkins-operator:all-srcs",
        "//prow/cmd/mkbuild-cluster:all-srcs",
        "//prow/cmd/mkpj:all-srcs",
        "//prow/cmd/mkpod:all-srcs",
        "//prow/cmd/peribolos:all-srcs",
        "//prow/cmd/phony:all-srcs",
        "//prow/cmd/plank:all-srcs",
        "//prow/cmd/sidecar:all-srcs",
        "//prow/cmd/sinker:all-srcs",
        "//prow/cmd/status-reconciler:all-srcs",
        "//prow/cmd/sub:all-srcs",
        "//prow/cmd/tackle:all-srcs",
        "//prow/cmd/tide:all-srcs",
        "//prow/cmd/tot:all-srcs",
        "//prow/cmd/util:all-srcs",
        "//prow/commentpruner:all-srcs",
        "//prow/config:all-srcs",
        "//prow/crier:all-srcs",
        "//prow/cron:all-srcs",
        "//prow/deck/jobs:all-srcs",
        "//prow/entrypoint:all-srcs",
        "//prow/errorutil:all-srcs",
        "//prow/external-plugins/cherrypicker:all-srcs",
        "//prow/external-plugins/needs-rebase:all-srcs",
        "//prow/external-plugins/refresh:all-srcs",
        "//prow/flagutil:all-srcs",
        "//prow/gcsupload:all-srcs",
        "//prow/genfiles:all-srcs",
        "//prow/gerrit/adapter:all-srcs",
        "//prow/gerrit/client:all-srcs",
        "//prow/gerrit/reporter:all-srcs",
        "//prow/git:all-srcs",
        "//prow/github:all-srcs",
        "//prow/githuboauth:all-srcs",
        "//prow/hook:all-srcs",
        "//prow/initupload:all-srcs",
        "//prow/jenkins:all-srcs",
        "//prow/kube:all-srcs",
        "//prow/labels:all-srcs",
        "//prow/logrusutil:all-srcs",
        "//prow/metrics:all-srcs",
        "//prow/phony:all-srcs",
        "//prow/pjutil:all-srcs",
        "//prow/plank:all-srcs",
        "//prow/pluginhelp:all-srcs",
        "//prow/plugins:all-srcs",
        "//prow/pod-utils/clone:all-srcs",
        "//prow/pod-utils/decorate:all-srcs",
        "//prow/pod-utils/downwardapi:all-srcs",
        "//prow/pod-utils/gcs:all-srcs",
        "//prow/pod-utils/options:all-srcs",
        "//prow/pod-utils/wrapper:all-srcs",
        "//prow/prstatus:all-srcs",
        "//prow/pubsub/reporter:all-srcs",
        "//prow/pubsub/subscriber:all-srcs",
        "//prow/repoowners:all-srcs",
        "//prow/report:all-srcs",
        "//prow/sidecar:all-srcs",
        "//prow/slack:all-srcs",
        "//prow/spyglass:all-srcs",
        "//prow/statusreconciler:all-srcs",
        "//prow/test:all-srcs",
        "//prow/tide:all-srcs",
    ],
    tags = ["automanaged"],
)
