package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_docker//container:bundle.bzl", "container_bundle")
load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")
load("//prow:def.bzl", "prefix", "prow_push", "tags")
load("//def:image.bzl", image_tags = "tags")

prow_push(
    name = "release-push",
    bundle_name = "release",
    images = tags(
        cmds = [
            "admission",
            "autobump",
            "branchprotector",
            "checkconfig",
            "clonerefs",
            "config-bootstrapper",
            "deck",
            "entrypoint",
            "exporter",
            "gerrit",
            "crier",
            "generic-autobumper",
            "grandmatriarch",
            "gcsupload",
            "hook",
            "hmac",
            "horologium",
            "initupload",
            "jenkins-operator",
            "mkpj",
            "mkpod",
            "peribolos",
            "sidecar",
            "sinker",
            "status-reconciler",
            "sub",
            "tide",
            "tot",
            "pipeline",
            "prow-controller-manager",
        ],
        targets = {
            "needs-rebase": "//prow/external-plugins/needs-rebase:image",
            "cherrypicker": "//prow/external-plugins/cherrypicker:image",
            "refresh": "//prow/external-plugins/refresh:image",
            "ghproxy": "//ghproxy:image",
            "label_sync": "//label_sync:image",
            "commenter": "//robots/commenter:image",
            "pr-creator": "//robots/pr-creator:image",
            "issue-creator": "//robots/issue-creator:image",
            "configurator": "//testgrid/cmd/configurator:image",
            "transfigure": "//testgrid/cmd/transfigure:image",
            "gcsweb": "//gcsweb/cmd/gcsweb:image",
        },
    ),
)

prow_push(
    name = "testimage-push",
    bundle_name = "testimage",
    images = image_tags(
        targets = {
            # Local registry as documented: https://kind.sigs.k8s.io/docs/user/local-registry/
            "localhost:5000/sinker": "//prow/cmd/sinker:image",
            "localhost:5000/crier": "//prow/cmd/crier:image",
            "localhost:5000/hook": "//prow/cmd/hook:image",
            "localhost:5000/horologium": "//prow/cmd/horologium:image",
            "localhost:5000/fakeghserver": "//prow/test/integration/fakeghserver:image",
        },
    ),
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//prow/apis/prowjobs:all-srcs",
        "//prow/bugzilla:all-srcs",
        "//prow/client/clientset/versioned:all-srcs",
        "//prow/client/informers/externalversions:all-srcs",
        "//prow/client/listers/prowjobs/v1:all-srcs",
        "//prow/clonerefs:all-srcs",
        "//prow/cmd/admission:all-srcs",
        "//prow/cmd/autobump:all-srcs",
        "//prow/cmd/branchprotector:all-srcs",
        "//prow/cmd/checkconfig:all-srcs",
        "//prow/cmd/clonerefs:all-srcs",
        "//prow/cmd/cm2kc:all-srcs",
        "//prow/cmd/config-bootstrapper:all-srcs",
        "//prow/cmd/crier:all-srcs",
        "//prow/cmd/deck:all-srcs",
        "//prow/cmd/entrypoint:all-srcs",
        "//prow/cmd/exporter:all-srcs",
        "//prow/cmd/gcsupload:all-srcs",
        "//prow/cmd/generic-autobumper:all-srcs",
        "//prow/cmd/gerrit:all-srcs",
        "//prow/cmd/grandmatriarch:all-srcs",
        "//prow/cmd/hmac:all-srcs",
        "//prow/cmd/hook:all-srcs",
        "//prow/cmd/horologium:all-srcs",
        "//prow/cmd/initupload:all-srcs",
        "//prow/cmd/jenkins-operator:all-srcs",
        "//prow/cmd/mkpj:all-srcs",
        "//prow/cmd/mkpod:all-srcs",
        "//prow/cmd/peribolos:all-srcs",
        "//prow/cmd/phaino:all-srcs",
        "//prow/cmd/phony:all-srcs",
        "//prow/cmd/pipeline:all-srcs",
        "//prow/cmd/prow-controller-manager:all-srcs",
        "//prow/cmd/sidecar:all-srcs",
        "//prow/cmd/sinker:all-srcs",
        "//prow/cmd/status-reconciler:all-srcs",
        "//prow/cmd/sub:all-srcs",
        "//prow/cmd/tackle:all-srcs",
        "//prow/cmd/tide:all-srcs",
        "//prow/cmd/tot:all-srcs",
        "//prow/commentpruner:all-srcs",
        "//prow/config:all-srcs",
        "//prow/crier:all-srcs",
        "//prow/cron:all-srcs",
        "//prow/deck/jobs:all-srcs",
        "//prow/entrypoint:all-srcs",
        "//prow/external-plugins/cherrypicker:all-srcs",
        "//prow/external-plugins/needs-rebase:all-srcs",
        "//prow/external-plugins/refresh:all-srcs",
        "//prow/flagutil:all-srcs",
        "//prow/gcsupload:all-srcs",
        "//prow/genfiles:all-srcs",
        "//prow/gerrit/adapter:all-srcs",
        "//prow/gerrit/client:all-srcs",
        "//prow/ghhook:all-srcs",
        "//prow/git:all-srcs",
        "//prow/gitattributes:all-srcs",
        "//prow/github:all-srcs",
        "//prow/githubeventserver:all-srcs",
        "//prow/githuboauth:all-srcs",
        "//prow/hook:all-srcs",
        "//prow/initupload:all-srcs",
        "//prow/interrupts:all-srcs",
        "//prow/io:all-srcs",
        "//prow/jenkins:all-srcs",
        "//prow/jira:all-srcs",
        "//prow/kube:all-srcs",
        "//prow/labels:all-srcs",
        "//prow/logrusutil:all-srcs",
        "//prow/metrics:all-srcs",
        "//prow/phony:all-srcs",
        "//prow/pipeline/clientset/versioned:all-srcs",
        "//prow/pipeline/informers/externalversions:all-srcs",
        "//prow/pipeline/listers/pipeline/v1alpha1:all-srcs",
        "//prow/pjutil:all-srcs",
        "//prow/pkg/layeredsets:all-srcs",
        "//prow/plank:all-srcs",
        "//prow/pluginhelp:all-srcs",
        "//prow/plugins:all-srcs",
        "//prow/pod-utils/clone:all-srcs",
        "//prow/pod-utils/decorate:all-srcs",
        "//prow/pod-utils/downwardapi:all-srcs",
        "//prow/pod-utils/gcs:all-srcs",
        "//prow/pod-utils/options:all-srcs",
        "//prow/pod-utils/wrapper:all-srcs",
        "//prow/prstatus:all-srcs",
        "//prow/pubsub/subscriber:all-srcs",
        "//prow/repoowners:all-srcs",
        "//prow/secretutil:all-srcs",
        "//prow/sidecar:all-srcs",
        "//prow/simplifypath:all-srcs",
        "//prow/slack:all-srcs",
        "//prow/spyglass:all-srcs",
        "//prow/statusreconciler:all-srcs",
        "//prow/test:all-srcs",
        "//prow/testutil:all-srcs",
        "//prow/tide:all-srcs",
        "//prow/version:all-srcs",
    ],
    tags = ["automanaged"],
)
