filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//releng/config-forker:all-srcs",
        "//releng/config-rotator:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
