package(default_visibility = ["//visibility:public"])

filegroup(
    name = "scenarios",
    srcs = glob(["*.py"]),
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
)

py_test(
    name = "kubernetes_e2e_test",
    srcs = [
        "kubernetes_e2e.py",
        "kubernetes_e2e_test.py",
    ],
    python_version = "PY2",
)

py_test(
    name = "kubernetes_bazel_test",
    srcs = [
        "kubernetes_bazel.py",
        "kubernetes_bazel_test.py",
    ],
    python_version = "PY2",
)
