filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//testgrid/cluster:all-srcs",
        "//testgrid/cmd/configurator:all-srcs",
        "//testgrid/config:all-srcs",
        "//testgrid/images:all-srcs",
        "//testgrid/metadata:all-srcs",
        "//testgrid/resultstore:all-srcs",
        "//testgrid/util/gcs:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
