filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//testgrid/cmd/configurator:all-srcs",
        "//testgrid/cmd/transfigure:all-srcs",
        "//testgrid/pkg/configurator/configurator:all-srcs",
        "//testgrid/pkg/configurator/options:all-srcs",
        "//testgrid/pkg/configurator/prow:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
