load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["consts.go"],
    importpath = "k8s.io/test-infra/traiana",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//traiana/awsapi:all-srcs",
        "//traiana/prow/awsapi:all-srcs",
        "//traiana/prow/awsupload:all-srcs",
        "//traiana/prow/plugins/force-merge:all-srcs",
        "//traiana/prow/pod-utils/aws:all-srcs",
        "//traiana/storage:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
